--- a/SimHap.csproj
+++ b/SimHap.csproj
@@ -11,11 +11,11 @@
     <ProjectGuid>{19133D8C-01DC-4DDB-89ED-668A90978AFE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>sierses.SimHap</AssemblyName>
+    <AssemblyName>sierses.Sim</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <ApplicationVersion>1.0.0.0</ApplicationVersion>
     <FileAlignment>512</FileAlignment>
-    <RootNamespace>sierses.SimHap</RootNamespace>
+    <RootNamespace>sierses.Sim</RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -91,7 +91,7 @@
     <Compile Include="SimDataMethods.cs" />
     <Compile Include="SimDataNotify.cs" />
     <Compile Include="Spec.cs" />
-    <Compile Include="SimHap.cs" />
+    <Compile Include="Haptics.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="DataStatus.cs" />
     <Compile Include="APIStatus.cs" />
