Add Eq.cs; create example properties
Trivial Equalizer implementation

--- a/SimHap.csproj
+++ b/SimHap.csproj
@@ -89,6 +89,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Eq.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="SimData.cs" />
     <Compile Include="SimDataMethods.cs" />
