--- a/SimHap.csproj
+++ b/SimHap.csproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Eq.cs" />
+    <Compile Include="EqControls.cs" />
     <Compile Include="EqProps.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="SimData.cs" />
@@ -101,6 +102,7 @@
     </Compile>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Themes.cs" />
+    <Compile Include="ToneControl.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx" />
