--- a/SimHap.csproj
+++ b/SimHap.csproj
@@ -250,5 +250,8 @@
   <ItemGroup>
     <Resource Include="Resources\locked50x50.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\delete50x50.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
