MIDI Learn: throttle, rpm
Spec bug fix

--- a/SimHap.csproj
+++ b/SimHap.csproj
@@ -256,5 +256,8 @@
   <ItemGroup>
     <Resource Include="Resources\throttle50x50.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\midi50x50_2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
