4 Haptics properties to CCs for Phase Plant

--- a/NCalcScripts/MIDIio.ini
+++ b/NCalcScripts/MIDIio.ini
@@ -12,36 +12,28 @@ value='0'
 
 [ExportProperty]
 name='MIDIlog'
-value='15'
+value='3'
 
 [ExportProperty]
 name='MIDIsize'
 value='9'
 
 [ExportProperty]
-name='MIDIsliders'
-value='0,1'
-
-[ExportProperty]
-name='MIDIknobs'
-value='16'
-
-[ExportProperty]
 name='MIDICCsends'
-value='0,1,2,3'
+value='0,1,2,42'
 
 [ExportProperty]
 name='MIDICCsend0'
-value='MIDIio.slider1'
+value='ShakeITBSV3Plugin.Export.throttle.FrontLeft'
 
 [ExportProperty]
 name='MIDICCsend1'
-value='MIDIio.knob0'
+value='ShakeITBSV3Plugin.Export.throttle.RearLef'
 
 [ExportProperty]
 name='MIDICCsend2'
 value='ShakeITBSV3Plugin.Export.throttle.FrontRight'
 
 [ExportProperty]
-name='MIDICCsend3'
+name='MIDICCsend42'
 value='ShakeITBSV3Plugin.Export.throttle.RearRight'
